# Dash-Fleet

./: .flake8  .gitignore  .pylintrc  ACTIONS_SETUP.md  AGENT_INSTALL_GUIDE.md  API_CHANGES.md  BEFORE_AFTER_COMPARISON.md  CNAME  CODEBASE_ANALYSIS.md  COMPLETION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOY_SERVER.sh  DEPLOY_VPS.sh  DEPLOY_VPS_MANUAL.ps1  FLEET_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  Install-DashFleetAgent.bat  Install-DashFleetAgent.ps1  NEXT_STEPS.md  PHASE_1_CLEANUP_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_REFACTORING.md  PHASE_3_ACTION_PLAN.md  PHASE_4_ACTION_PLAN.md  PHASE_4_COMPLETION.md  PHASE_4_DEPLOYMENT.md  PHASE_4_TESTING_REPORT.md  PHASE_4_VALIDATION.md  PHASE_5_SUMMARY.md  PHASE_5_VERIFICATION.md  PHASE_6A_DEPLOYMENT.md  PROJECT_COMPLETION_SUMMARY.md  README_AGENT.md  README_INSTALLATION.md  REFACTORING_SUMMARY.md  RELEASE_NOTES.md  TECHNICAL_AUDIT.md  TRAY_DEPLOYMENT_SUMMARY.md  (+45 more)
.github/: copilot-instructions.md
data/: fleet.db  fleet.db-journal
deploy/: DEPLOYMENT_GUIDE_NEW_MACHINES.md  GUIDE_INSTALLATION_AGENT.md  INSTALL_QUICK_START.md  INSTALL_QUICK_START_LINUX.md  PRODUCTION_GUIDE.md  README.md  README_AGENT_EXE.md  TRAY_FEATURE.md  build_agent_exe.ps1  checklist.md  dashfleet.service  dashfleet_oneliner.ps1  deploy.sh  digitalocean_steps.md  hetzner_steps.md  install_agent_exe.ps1  install_agent_linux.sh  install_agent_windows.ps1  install_dashfleet.bat  install_dashfleet_linux.sh  install_dashfleet_linux_oneliner.sh  install_dashfleet_oneliner.ps1  install_linux_complete.sh  install_simple.ps1  (+4 more)
(+94 files in other folders)
