[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashfleet"
version = "0.0.1"
description = "DashFleet - monitoring server and agent"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=2.0",
  "psutil>=5.8",
  "gunicorn>=20.0",
  "pytest>=7.0"
]
